--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
         </div>
     </nav>
-    <section style="padding: 40px;padding-bottom: 10px;">
+    <section style="padding: 25px;padding-bottom: 10px;">
         <div class="container">
-            <div class="text-center" style="padding: 134px;padding-top: 40px;padding-bottom: 30px;">
+            <div class="text-center" style="padding: 16px;padding-top: 40px;padding-bottom: 30px;">
                 <p class="fw-bold mb-2">Simplifying Marine Operations</p>
-                <h1 class="fw-bold mb-4">Exploring Ships from a Multidisciplinary Perspective</h1>
-                <div class="d-flex d-md-flex justify-content-center align-items-center justify-content-md-center align-items-md-center"><button class="btn btn-primary fs-5 me-2 py-2 px-4" type="button" style="background: var(--bs-indigo);border-style: none;">Start Learning</button><button class="btn btn-light fs-5 py-2 px-4" type="button" style="border-style: none;">Stay Up-to-Date</button></div>
+                <h1 class="fw-bold mb-4">Exploring Ships from a <br>Multidisciplinary Perspective</h1>
+                <div class="d-flex flex-fill justify-content-center"><button class="btn btn-primary fs-5 me-2 py-2 px-4 w-200" type="button" style="background: var(--bs-indigo);border-style: none;min-width: 130px;">Start Learning</button><button class="btn btn-light fs-5 me-2 py-2 px-4 w-200" type="button" style="border-style: none;min-width: 130px;">Stay Up to Date</button></div>
             </div>
         </div>
     </section>
